# 3D_voxel_diffusion

./: .gitignore  CMakeLists.txt  build.sh  test.tp
include/: allocation.hpp  gauss.hpp  pardiso_solver.h  shapefunction.hpp  three_dimension.hpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  O17_tool.cpp  csr_matrix.cpp  diffusion_fem.cpp  file_export.cpp  input_information.cpp  pardiso.cpp
src/three_dimensional_diffusion/: CMakeLists.txt  main.cpp
